<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#666"
	android:id="@+id/fltrLeftTop"
	android:padding="8dp"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
					
	    <ImageView
			android:id="@+id/spfltView"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:background="@drawable/touchpad"
			android:contentDescription="@string/control_pad" />
		<TextView
			android:id="@+id/s_hi_text"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:padding="6dp"
			android:textSize="10dp"
			android:textColor="#000"
			android:text="@string/s_hi_text" />
		<TextView
		    android:id="@+id/fltr"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/spfltView"
			android:layout_alignTop="@+id/spfltView"
			android:layout_alignRight="@+id/spfltView"
			android:layout_alignBottom="@+id/spfltView"
			android:gravity="center"
			android:text="@string/fltr"
			android:textStyle="bold|italic"
			android:textColor="#a00032" />
		<TextView
			android:id="@+id/limit_text"
			android:layout_alignBottom="@+id/spfltView"
			android:layout_alignRight="@+id/spfltView"
			android:padding="6dp"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="10dp"
			android:textColor="#000"
			android:text="@string/limit_text" />
	</RelativeLayout>